--- a/app/src/main/res/layout/obd_activity.xml
+++ b/app/src/main/res/layout/obd_activity.xml
@@ -93,7 +93,7 @@
                     card_view:layout_constraintVertical_bias="0.0" />
 
                 <TextView
-                    android:id="@+id/tempMotoreDegress"
+                    android:id="@+id/vin"
                     android:layout_width="0dp"
                     android:layout_height="125dp"
                     android:textAlignment="center"
@@ -167,7 +167,6 @@
                     android:id="@+id/consumoMedioLT"
                     android:layout_width="0dp"
                     android:layout_height="125dp"
-                    android:text="Work in progress"
                     android:textAlignment="center"
                     android:textSize="18sp"
                     card_view:layout_constraintBottom_toBottomOf="parent"
@@ -192,7 +191,7 @@
                     android:id="@+id/carburante"
                     android:layout_width="180dp"
                     android:layout_height="25dp"
-                    android:text="Carburante: Benzina"
+                    android:text="Carburante: "
                     android:textAlignment="center"
                     card_view:layout_constraintBottom_toBottomOf="parent"
                     card_view:layout_constraintEnd_toEndOf="parent"
@@ -239,7 +238,6 @@
                     android:id="@+id/pressioneGommeBar"
                     android:layout_width="0dp"
                     android:layout_height="125dp"
-                    android:text="2.5 bar"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     card_view:layout_constraintBottom_toBottomOf="parent"
@@ -275,7 +273,6 @@
                     android:id="@+id/utilizzo"
                     android:layout_width="0dp"
                     android:layout_height="125dp"
-                    android:text="Work in progress"
                     android:textAlignment="center"
                     android:textSize="18sp"
                     card_view:layout_constraintBottom_toBottomOf="parent"
