--- a/app/src/main/res/layout/obd_activity.xml
+++ b/app/src/main/res/layout/obd_activity.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -283,6 +284,19 @@
         </android.support.v7.widget.CardView>
 
     </android.support.v7.widget.GridLayout>
+
+    <Button
+        android:id="@+id/DTC"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="dtcactivity"
+        android:text="dtc"
+        card_view:layout_constraintBottom_toBottomOf="parent"
+        card_view:layout_constraintEnd_toEndOf="parent"
+        card_view:layout_constraintHorizontal_bias="0.386"
+        card_view:layout_constraintStart_toStartOf="parent"
+        card_view:layout_constraintTop_toTopOf="parent"
+        card_view:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
 
