--- a/app/src/main/res/layout/obd_activity.xml
+++ b/app/src/main/res/layout/obd_activity.xml
@@ -59,6 +59,20 @@
         card_view:layout_constraintTop_toTopOf="parent"
         card_view:layout_constraintVertical_bias="0.022" />
 
+    <Button
+        android:id="@+id/DTC"
+        android:layout_width="64dp"
+        android:layout_height="32dp"
+        android:onClick="dtcactivity"
+        android:text="dtc"
+        android:textSize="8sp"
+        card_view:layout_constraintBottom_toBottomOf="parent"
+        card_view:layout_constraintEnd_toEndOf="parent"
+        card_view:layout_constraintHorizontal_bias="0.712"
+        card_view:layout_constraintStart_toStartOf="parent"
+        card_view:layout_constraintTop_toTopOf="parent"
+        card_view:layout_constraintVertical_bias="0.008" />
+
     <android.support.v7.widget.GridLayout
         android:id="@+id/gridLayout"
         android:layout_width="0dp"
@@ -284,19 +298,6 @@
         </android.support.v7.widget.CardView>
 
     </android.support.v7.widget.GridLayout>
-
-    <Button
-        android:id="@+id/DTC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="dtcactivity"
-        android:text="dtc"
-        card_view:layout_constraintBottom_toBottomOf="parent"
-        card_view:layout_constraintEnd_toEndOf="parent"
-        card_view:layout_constraintHorizontal_bias="0.386"
-        card_view:layout_constraintStart_toStartOf="parent"
-        card_view:layout_constraintTop_toTopOf="parent"
-        card_view:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
 
