--- a/app/src/main/res/layout/obd_activity.xml
+++ b/app/src/main/res/layout/obd_activity.xml
@@ -76,10 +76,10 @@
     <android.support.v7.widget.GridLayout
         android:id="@+id/gridLayout"
         android:layout_width="0dp"
-        android:layout_height="450dp"
-        card_view:columnCount="2"
+        android:layout_height="wrap_content"
+        card_view:columnCount="1"
         card_view:layout_constraintBottom_toBottomOf="parent"
-        card_view:layout_constraintEnd_toEndOf="parent"
+        card_view:layout_constraintEnd_toStartOf="@+id/gridLayout2"
         card_view:layout_constraintHorizontal_bias="0.0"
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="parent"
@@ -88,8 +88,8 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/CardView1"
-            android:layout_width="wrap_content"
-            android:layout_height="150dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -97,7 +97,7 @@
 
                 <TextView
                     android:id="@+id/tempMotore"
-                    android:layout_width="180dp"
+                    android:layout_width="0dp"
                     android:layout_height="25dp"
                     android:text="Codice Identificatico Auto"
                     android:textAlignment="center"
@@ -123,8 +123,8 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/CardView2"
-            android:layout_width="wrap_content"
-            android:layout_height="150dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -132,7 +132,7 @@
 
                 <TextView
                     android:id="@+id/tempRefrigerante"
-                    android:layout_width="180dp"
+                    android:layout_width="0dp"
                     android:layout_height="25dp"
                     android:text="Temperatura Refrigerante"
                     android:textAlignment="center"
@@ -159,8 +159,8 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/CardView3"
-            android:layout_width="180dp"
-            android:layout_height="150dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -168,7 +168,7 @@
 
                 <TextView
                     android:id="@+id/consumoMedio"
-                    android:layout_width="180dp"
+                    android:layout_width="0dp"
                     android:layout_height="25dp"
                     android:text="Consumo Medio"
                     android:textAlignment="center"
@@ -193,10 +193,24 @@
             </android.support.constraint.ConstraintLayout>
         </android.support.v7.widget.CardView>
 
+    </android.support.v7.widget.GridLayout>
+
+    <android.support.v7.widget.GridLayout
+        android:id="@+id/gridLayout2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        card_view:columnCount="1"
+        card_view:layout_constraintBottom_toBottomOf="parent"
+        card_view:layout_constraintEnd_toEndOf="parent"
+        card_view:layout_constraintStart_toEndOf="@+id/gridLayout"
+        card_view:layout_constraintTop_toTopOf="parent"
+        card_view:layout_constraintVertical_bias="1.0"
+        card_view:rowCount="3">
+
         <android.support.v7.widget.CardView
             android:id="@+id/CardView4"
-            android:layout_width="180dp"
-            android:layout_height="150dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -204,7 +218,7 @@
 
                 <TextView
                     android:id="@+id/carburante"
-                    android:layout_width="180dp"
+                    android:layout_width="0dp"
                     android:layout_height="25dp"
                     android:textAlignment="center"
                     card_view:layout_constraintBottom_toBottomOf="parent"
@@ -229,8 +243,8 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/CardView5"
-            android:layout_width="180dp"
-            android:layout_height="150dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -238,7 +252,7 @@
 
                 <TextView
                     android:id="@+id/pressioneGomme"
-                    android:layout_width="180dp"
+                    android:layout_width="0dp"
                     android:layout_height="25dp"
                     android:text="Pressione Gomme"
                     android:textAlignment="center"
@@ -264,8 +278,8 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/CardView6"
-            android:layout_width="180dp"
-            android:layout_height="150dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -273,7 +287,7 @@
 
                 <TextView
                     android:id="@+id/tempoUtilizzo"
-                    android:layout_width="180dp"
+                    android:layout_width="0dp"
                     android:layout_height="25dp"
                     android:text="Tempo di Utilizzo"
                     android:textAlignment="center"
@@ -296,7 +310,6 @@
                     card_view:layout_constraintVertical_bias="1.0" />
             </android.support.constraint.ConstraintLayout>
         </android.support.v7.widget.CardView>
-
     </android.support.v7.widget.GridLayout>
 
 </android.support.constraint.ConstraintLayout>
