--- a/app/src/main/res/layout/obd_activity.xml
+++ b/app/src/main/res/layout/obd_activity.xml
@@ -11,6 +11,7 @@
         android:id="@+id/speed"
         android:layout_width="184dp"
         android:layout_height="61dp"
+        android:gravity="center"
         android:textAlignment="center"
         android:textSize="40sp"
         card_view:layout_constraintBottom_toTopOf="@+id/rpm"
@@ -24,6 +25,7 @@
         android:id="@+id/rpm"
         android:layout_width="184dp"
         android:layout_height="61dp"
+        android:gravity="center"
         android:textAlignment="center"
         android:textSize="40sp"
         card_view:layout_constraintBottom_toBottomOf="parent"
@@ -37,6 +39,7 @@
         android:id="@+id/marcia"
         android:layout_width="89dp"
         android:layout_height="137dp"
+        android:gravity="center"
         android:textAlignment="center"
         android:textSize="120sp"
         card_view:layout_constraintBottom_toBottomOf="@+id/gridLayout"
@@ -111,13 +114,12 @@
                     android:id="@+id/vin"
                     android:layout_width="0dp"
                     android:layout_height="125dp"
+                    android:gravity="center"
                     android:textAlignment="center"
                     android:textSize="14sp"
                     card_view:layout_constraintBottom_toBottomOf="parent"
                     card_view:layout_constraintEnd_toEndOf="parent"
-                    card_view:layout_constraintStart_toStartOf="parent"
-                    card_view:layout_constraintTop_toTopOf="parent"
-                    card_view:layout_constraintVertical_bias="1.0" />
+                    card_view:layout_constraintStart_toStartOf="parent" />
             </android.support.constraint.ConstraintLayout>
         </android.support.v7.widget.CardView>
 
@@ -147,6 +149,7 @@
                     android:id="@+id/tempRefrigeranteDegrees"
                     android:layout_width="0dp"
                     android:layout_height="125dp"
+                    android:gravity="center"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     card_view:layout_constraintBottom_toBottomOf="parent"
@@ -182,6 +185,7 @@
                     android:id="@+id/consumoMedioLT"
                     android:layout_width="0dp"
                     android:layout_height="125dp"
+                    android:gravity="center"
                     android:textAlignment="center"
                     android:textSize="14sp"
                     card_view:layout_constraintBottom_toBottomOf="parent"
@@ -231,6 +235,7 @@
                     android:id="@+id/carburante2"
                     android:layout_width="0dp"
                     android:layout_height="125dp"
+                    android:gravity="center"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     card_view:layout_constraintBottom_toBottomOf="parent"
@@ -266,6 +271,7 @@
                     android:id="@+id/pressioneGommeBar"
                     android:layout_width="0dp"
                     android:layout_height="125dp"
+                    android:gravity="center"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     card_view:layout_constraintBottom_toBottomOf="parent"
@@ -301,6 +307,7 @@
                     android:id="@+id/utilizzo"
                     android:layout_width="0dp"
                     android:layout_height="125dp"
+                    android:gravity="center"
                     android:textAlignment="center"
                     android:textSize="18sp"
                     card_view:layout_constraintBottom_toBottomOf="parent"
