--- a/app/src/main/res/layout/obd_activity.xml
+++ b/app/src/main/res/layout/obd_activity.xml
@@ -102,7 +102,7 @@
                     android:id="@+id/tempMotore"
                     android:layout_width="0dp"
                     android:layout_height="25dp"
-                    android:text="Codice Identificatico Auto"
+                    android:text="DECIDERE COSA METTERE"
                     android:textAlignment="center"
                     card_view:layout_constraintBottom_toBottomOf="parent"
                     card_view:layout_constraintEnd_toEndOf="parent"
@@ -259,7 +259,7 @@
                     android:id="@+id/consumoLH"
                     android:layout_width="0dp"
                     android:layout_height="25dp"
-                    android:text="Consumo istantaneo?"
+                    android:text="DECIDERE COSA METTERE"
                     android:textAlignment="center"
                     card_view:layout_constraintBottom_toBottomOf="parent"
                     card_view:layout_constraintEnd_toEndOf="parent"
@@ -295,7 +295,7 @@
                     android:id="@+id/tempoUtilizzo"
                     android:layout_width="0dp"
                     android:layout_height="25dp"
-                    android:text="Tempo di Utilizzo"
+                    android:text="DECIDERE COSA METTERE"
                     android:textAlignment="center"
                     card_view:layout_constraintBottom_toBottomOf="parent"
                     card_view:layout_constraintEnd_toEndOf="parent"
