--- a/app/src/main/res/layout/obd_activity.xml
+++ b/app/src/main/res/layout/obd_activity.xml
@@ -76,6 +76,20 @@
         card_view:layout_constraintTop_toTopOf="parent"
         card_view:layout_constraintVertical_bias="0.008" />
 
+    <Button
+        android:id="@+id/DTC2"
+        android:layout_width="64dp"
+        android:layout_height="32dp"
+        android:onClick="speedactivity"
+        android:text="speed"
+        android:textSize="8sp"
+        card_view:layout_constraintBottom_toBottomOf="parent"
+        card_view:layout_constraintEnd_toEndOf="parent"
+        card_view:layout_constraintHorizontal_bias="0.083"
+        card_view:layout_constraintStart_toStartOf="parent"
+        card_view:layout_constraintTop_toTopOf="parent"
+        card_view:layout_constraintVertical_bias="0.008" />
+
     <android.support.v7.widget.GridLayout
         android:id="@+id/gridLayout"
         android:layout_width="0dp"
