--- a/app/src/main/res/layout/obd_activity.xml
+++ b/app/src/main/res/layout/obd_activity.xml
@@ -63,7 +63,7 @@
         card_view:layout_constraintVertical_bias="0.022" />
 
     <Button
-        android:id="@+id/DTC"
+        android:id="@+id/btnDTC"
         android:layout_width="64dp"
         android:layout_height="32dp"
         android:onClick="setTimeout"
@@ -77,7 +77,7 @@
         card_view:layout_constraintVertical_bias="0.008" />
 
     <Button
-        android:id="@+id/DTC2"
+        android:id="@+id/btnSpeed"
         android:layout_width="64dp"
         android:layout_height="32dp"
         android:onClick="speedactivity"
