--- a/app/src/main/res/layout/obd_activity.xml
+++ b/app/src/main/res/layout/obd_activity.xml
@@ -3,11 +3,26 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<TextView
+    <Button
+        android:id="@+id/btnSpeed2"
+        android:layout_width="64dp"
+        android:layout_height="32dp"
+        android:onClick="setTimeoutProgress"
+        android:text="progress"
+        android:textSize="7sp"
+        card_view:layout_constraintBottom_toBottomOf="parent"
+        card_view:layout_constraintEnd_toEndOf="parent"
+        card_view:layout_constraintHorizontal_bias="0.083"
+        card_view:layout_constraintStart_toStartOf="parent"
+        card_view:layout_constraintTop_toTopOf="parent"
+        card_view:layout_constraintVertical_bias="0.061" />
+
+    <TextView
         android:id="@+id/speed"
         android:layout_width="184dp"
         android:layout_height="61dp"
@@ -35,19 +50,20 @@
         card_view:layout_constraintTop_toTopOf="parent"
         card_view:layout_constraintVertical_bias="0.203" />
 
-    <TextView
-        android:id="@+id/posizioneAcceleratore"
-        android:layout_width="197dp"
-        android:layout_height="131dp"
-        android:gravity="center"
-        android:textAlignment="textStart"
-        android:textSize="30sp"
-        card_view:layout_constraintBottom_toBottomOf="@+id/gridLayout"
+    <com.mikhaellopez.circularprogressbar.CircularProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="157dp"
+        android:layout_height="140dp"
+        card_view:cpb_background_progressbar_color="#b6bbd8"
+        card_view:cpb_background_progressbar_width="5dp"
+        card_view:cpb_progressbar_color="#3f51b5"
+        card_view:cpb_progressbar_width="10dp"
+        card_view:layout_constraintBottom_toBottomOf="parent"
         card_view:layout_constraintEnd_toEndOf="parent"
         card_view:layout_constraintHorizontal_bias="0.0"
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="parent"
-        card_view:layout_constraintVertical_bias="0.104" />
+        card_view:layout_constraintVertical_bias="0.133" />
 
     <TextView
         android:id="@+id/tempOut"
@@ -67,7 +83,7 @@
         android:layout_width="64dp"
         android:layout_height="32dp"
         android:onClick="setTimeout"
-        android:text="dtc"
+        android:text="Timeout"
         android:textSize="8sp"
         card_view:layout_constraintBottom_toBottomOf="parent"
         card_view:layout_constraintEnd_toEndOf="parent"
@@ -343,6 +359,20 @@
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="parent"
         card_view:layout_constraintVertical_bias="0.008" />
+
+    <EditText
+        android:id="@+id/delayms2"
+        android:layout_width="87dp"
+        android:layout_height="37dp"
+        android:editable="true"
+        android:ems="10"
+        android:inputType="number"
+        card_view:layout_constraintBottom_toBottomOf="parent"
+        card_view:layout_constraintEnd_toEndOf="parent"
+        card_view:layout_constraintHorizontal_bias="0.435"
+        card_view:layout_constraintStart_toStartOf="parent"
+        card_view:layout_constraintTop_toTopOf="parent"
+        card_view:layout_constraintVertical_bias="0.061" />
 
     <TextView
         android:id="@+id/protocol"
