--- a/app/src/main/res/layout/obd_activity.xml
+++ b/app/src/main/res/layout/obd_activity.xml
@@ -26,6 +26,7 @@
         android:id="@+id/speed"
         android:layout_width="184dp"
         android:layout_height="61dp"
+        android:layout_marginTop="72dp"
         android:gravity="center"
         android:textAlignment="center"
         android:textSize="40sp"
@@ -36,24 +37,10 @@
         card_view:layout_constraintTop_toTopOf="parent"
         card_view:layout_constraintVertical_bias="0.837" />
 
-    <TextView
-        android:id="@+id/rpm"
-        android:layout_width="184dp"
-        android:layout_height="61dp"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:textSize="40sp"
-        card_view:layout_constraintBottom_toBottomOf="parent"
-        card_view:layout_constraintEnd_toEndOf="parent"
-        card_view:layout_constraintHorizontal_bias="1.0"
-        card_view:layout_constraintStart_toStartOf="parent"
-        card_view:layout_constraintTop_toTopOf="parent"
-        card_view:layout_constraintVertical_bias="0.203" />
-
     <com.mikhaellopez.circularprogressbar.CircularProgressBar
         android:id="@+id/progressBar"
-        android:layout_width="157dp"
-        android:layout_height="140dp"
+        android:layout_width="150dp"
+        android:layout_height="146dp"
         card_view:cpb_background_progressbar_color="#b6bbd8"
         card_view:cpb_background_progressbar_width="5dp"
         card_view:cpb_progressbar_color="#3f51b5"
@@ -63,7 +50,31 @@
         card_view:layout_constraintHorizontal_bias="0.0"
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="parent"
-        card_view:layout_constraintVertical_bias="0.133" />
+        card_view:layout_constraintVertical_bias="0.154" />
+
+    <TextView
+        android:id="@+id/rpm"
+        android:layout_width="130dp"
+        android:layout_height="46dp"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        card_view:layout_constraintBottom_toBottomOf="@+id/progressBar"
+        card_view:layout_constraintEnd_toEndOf="@+id/progressBar"
+        card_view:layout_constraintStart_toStartOf="@+id/progressBar"
+        card_view:layout_constraintTop_toTopOf="@+id/progressBar" />
+
+    <com.github.anastr.speedviewlib.SpeedView
+        android:id="@+id/speedView2"
+        android:layout_width="216dp"
+        android:layout_height="182dp"
+        card_view:layout_constraintBottom_toBottomOf="parent"
+        card_view:layout_constraintEnd_toEndOf="parent"
+        card_view:layout_constraintHorizontal_bias="1.0"
+        card_view:layout_constraintStart_toStartOf="parent"
+        card_view:layout_constraintTop_toTopOf="parent"
+        card_view:layout_constraintVertical_bias="0.149"
+        card_view:withTremble="false" />
 
     <TextView
         android:id="@+id/tempOut"
@@ -383,7 +394,7 @@
         card_view:layout_constraintHorizontal_bias="0.0"
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="parent"
-        card_view:layout_constraintVertical_bias="0.316" />
+        card_view:layout_constraintVertical_bias="0.359" />
 
 </android.support.constraint.ConstraintLayout>
 
