--- a/app/src/main/res/layout/activity_speed.xml
+++ b/app/src/main/res/layout/activity_speed.xml
@@ -43,4 +43,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.497"
         app:withTremble="false" />
+
+    <Button
+        android:id="@+id/btnOBD"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="setOBD"
+        android:text="OBD"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.499"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.044" />
 </android.support.constraint.ConstraintLayout>
