--- a/app/src/main/res/layout/obd_activity.xml
+++ b/app/src/main/res/layout/obd_activity.xml
@@ -130,7 +130,7 @@
         android:textSize="8sp"
         card_view:layout_constraintBottom_toTopOf="@+id/guideline0.15"
         card_view:layout_constraintEnd_toEndOf="parent"
-        card_view:layout_constraintHorizontal_bias="0.3"
+        card_view:layout_constraintHorizontal_bias="0.2"
         card_view:layout_constraintStart_toStartOf="@+id/guidelineVertical0.5"
         card_view:layout_constraintTop_toTopOf="parent" />
 
@@ -417,5 +417,18 @@
         card_view:layout_constraintStart_toEndOf="@+id/btnSpeed"
         card_view:layout_constraintTop_toBottomOf="@+id/tempOut"
         card_view:layout_constraintVertical_bias="0.25" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="64dp"
+        android:layout_height="32dp"
+        android:onClick="riprovaOBDActivity"
+        android:text="restart"
+        android:textSize="8sp"
+        card_view:layout_constraintBottom_toTopOf="@+id/btnSpeed"
+        card_view:layout_constraintEnd_toStartOf="@+id/tempOut"
+        card_view:layout_constraintHorizontal_bias="0.89"
+        card_view:layout_constraintStart_toStartOf="@+id/guidelineVertical0.55"
+        card_view:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
 
