--- a/app/src/main/res/layout/obd_activity.xml
+++ b/app/src/main/res/layout/obd_activity.xml
@@ -175,6 +175,7 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/CardView1"
+        card_view:cardCornerRadius="8dp"
         android:layout_width="0dp"
         android:layout_height="0dp"
         card_view:layout_constraintBottom_toTopOf="@+id/guideline0.6"
@@ -218,7 +219,8 @@
         card_view:layout_constraintBottom_toTopOf="@+id/guideline0.8"
         card_view:layout_constraintEnd_toStartOf="@+id/guidelineVertical0.5"
         card_view:layout_constraintStart_toStartOf="parent"
-        card_view:layout_constraintTop_toTopOf="@+id/guideline0.6">
+        card_view:layout_constraintTop_toTopOf="@+id/guideline0.6"
+        card_view:cardCornerRadius="8dp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -258,7 +260,8 @@
         card_view:layout_constraintBottom_toBottomOf="parent"
         card_view:layout_constraintEnd_toStartOf="@+id/guidelineVertical0.5"
         card_view:layout_constraintStart_toStartOf="parent"
-        card_view:layout_constraintTop_toTopOf="@+id/guideline0.8">
+        card_view:layout_constraintTop_toTopOf="@+id/guideline0.8"
+        card_view:cardCornerRadius="8dp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -298,7 +301,8 @@
         card_view:layout_constraintBottom_toTopOf="@+id/guideline0.6"
         card_view:layout_constraintEnd_toEndOf="parent"
         card_view:layout_constraintStart_toStartOf="@+id/guidelineVertical0.5"
-        card_view:layout_constraintTop_toTopOf="@+id/guideline0.4">
+        card_view:layout_constraintTop_toTopOf="@+id/guideline0.4"
+        card_view:cardCornerRadius="8dp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -336,7 +340,8 @@
         card_view:layout_constraintBottom_toTopOf="@+id/guideline0.8"
         card_view:layout_constraintEnd_toEndOf="parent"
         card_view:layout_constraintStart_toStartOf="@+id/guidelineVertical0.5"
-        card_view:layout_constraintTop_toTopOf="@+id/guideline0.6">
+        card_view:layout_constraintTop_toTopOf="@+id/guideline0.6"
+        card_view:cardCornerRadius="8dp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -374,7 +379,8 @@
         card_view:layout_constraintBottom_toBottomOf="parent"
         card_view:layout_constraintEnd_toEndOf="parent"
         card_view:layout_constraintStart_toStartOf="@+id/guidelineVertical0.5"
-        card_view:layout_constraintTop_toTopOf="@+id/guideline0.8">
+        card_view:layout_constraintTop_toTopOf="@+id/guideline0.8"
+        card_view:cardCornerRadius="8dp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
