--- a/app/src/main/res/layout/activity_speed.xml
+++ b/app/src/main/res/layout/activity_speed.xml
@@ -35,8 +35,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guidelineVertical0.3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="@+id/guideline0.5" />
 
     <TextView
         android:id="@+id/rpm3"
@@ -56,6 +55,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/guideline0.5"
         app:layout_constraintEnd_toStartOf="@+id/guidelineVertical0.3"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:withTremble="false" />
